--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 [dependencies]
 aws-sdk-dynamodb = "1.34.0"
 aws_lambda_events = "0.15.1"
+base64 = "0.22.1"
+flate2 = "1.1.2"
 fractic-aws-dynamo = { git = "https://github.com/fractic-io/rust-aws-dynamo.git" }
 fractic-server-error = { git = "https://github.com/fractic-io/rust-server-error.git" }
 lambda_runtime = "0.11.3"
