--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,12 +5,12 @@ authors = ["Mart van Buren <mart@fractic.io>"]
 edition = "2021"
 
 [dependencies]
-aws-sdk-dynamodb = "1.34.0"
-aws_lambda_events = "0.15.1"
-base64 = "0.22.1"
-flate2 = "1.1.2"
+aws-sdk-dynamodb = "^1.34.0"
+aws_lambda_events = "^0.15.1"
+base64 = "^0.22.1"
+flate2 = "^1.1.2"
 fractic-aws-dynamo = { git = "https://github.com/fractic-io/rust-aws-dynamo.git" }
 fractic-server-error = { git = "https://github.com/fractic-io/rust-server-error.git" }
-lambda_runtime = "0.11.3"
-serde = "1.0.203"
-serde_json_path_to_error = "0.1.4"
+lambda_runtime = "^0.11.3"
+serde = "^1.0.203"
+serde_json_path_to_error = "^0.1.4"
