--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ fractic-server-error = { git = "https://github.com/fractic-io/rust-server-error.
 lambda_runtime = "^0.11.3"
 serde = "^1.0.203"
 serde_json_path_to_error = "^0.1.4"
+async-trait = "^0.1.83"
