--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,6 @@ fractic-server-error = { git = "https://github.com/fractic-io/rust-server-error.
 lambda_runtime = "^0.11.3"
 serde = "^1.0.203"
 serde_json_path_to_error = "^0.1.4"
+tokio = { version = "^1", features = ["macros"] }
+tracing = { version = "^0.1", features = ["log"] }
+tracing-subscriber = { version = "^0.3", default-features = false, features = ["fmt"] }
